--- a/assets/tailwind/main.css
+++ b/assets/tailwind/main.css
@@ -3,6 +3,10 @@
 @tailwind utilities;
 
 
+html{
+    scroll-behavior: smooth;
+}
+
 body{
     @apply font-sans;
 }
@@ -135,8 +139,8 @@ input.input-control{
     px-3 2xl:px-6
     py-1
 }
-.navbar-nav .nav-item:hover .nav-link,
-.navbar-nav .nav-item.active .nav-link{
+.navbar-nav .nav-link:hover,
+.navbar-nav .nav-link.active{
     @apply
     text-opacity-100
     before:w-full
@@ -154,6 +158,24 @@ input.input-control{
     w-[26px]
     h-[1px]
     bg-white
+}
+
+.header.is-sticky {
+    position: fixed;
+    box-shadow: 0 5px 16px rgba(0, 0, 0, 0.1);
+    padding: 30px 0;
+    background-color: rgba(0, 0, 0, 0.8);
+    backdrop-filter: blur(10px);
+    animation: slideDown 0.35s ease-out;
+}
+  
+@keyframes slideDown {
+    from {
+      transform: translateY(-100%);
+    }
+    to {
+      transform: translateY(0);
+    }
 }
 
 /* Offcanvas */
